--- a/index2.html
+++ b/index2.html
@@ -1,27 +1,37 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    <div class=" w-[100%] h-[100%] grid grid-rows-2 grid-cols-5 gap-5 ">
-        <div class="border-2 border-black rounded-md "><img src="https://plus.unsplash.com/premium_photo-1678218594563-9fe0d16c6838?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixclass=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> <h2 class="font-bold">₹<span>5000</span>3999</h2>
-      <h3>White plain Shirt</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum.</p></div>
-        <div class="border-2 border-black rounded-md "><img src="https://plus.unsplash.com/premium_photo-1678218594563-9fe0d16c6838?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixclass=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> <h2 class="font-bold">₹<span>5000</span>3999</h2>
-      <h3>White plain Shirt</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum.</p></div>
-        <div class="border-2 border-black rounded-md "><img src="https://plus.unsplash.com/premium_photo-1678218594563-9fe0d16c6838?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixclass=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> <h2 class="font-bold">₹<span>5000</span>3999</h2>
-      <h3>White plain Shirt</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum.</p></div>
-        <div class="border-2 border-black rounded-md "><img src="https://plus.unsplash.com/premium_photo-1678218594563-9fe0d16c6838?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixclass=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> <h2 class="font-bold">₹<span>5000</span>3999</h2>
-      <h3>White plain Shirt</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum.</p></div>
-        <div class="border-2 border-black rounded-md "><img src="https://plus.unsplash.com/premium_photo-1678218594563-9fe0d16c6838?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixclass=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> <h2 class="font-bold">₹<span>5000</span>3999</h2>
-      <h3>White plain Shirt</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum.</p></div>
-         </div>
+    <!-- <p id="one">I M YASH JADAUN</p>
+    <p id="two">GLA UNIVERSITY</p>
+    <h1 id="three">Engineers</h1>
+    
+    <button>CLICK ME</button> -->
+
+    <!-- <h1>HELLO</h1>
+    <div id="one">
+
+    </div>
+
+    <div id="two">
+
+    </div>
+
+    <div id="three">
+
+    </div> -->
+
+
+
+   <div>
+    
+   </div>
+
+
 </body>
 </html>
