--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -31,5 +31,6 @@
     <!-- <script src="script.js"></script> -->
     <!-- <script src="ClassesandObjects.js"></script> -->
     <script src="ClassesandObjects.js"></script>
+    <script src="ErrorHandling.js"></script>
 </body>
 </html>
