--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      </style>
 </head>
 <body>
-  <h1 id="headingone">yash</h1>
+  <!-- <h1 id="headingone">yash</h1>
   <p>I m a Btech student</p>
   <button>pick me</button>
   <h2 class="myClass">I study Computer Science</h2>
@@ -27,6 +27,8 @@
   <h3 class="heading">Backlogs</h3>
   <button style="background-color: red;">Click Here</button>
   <p>GLA UNIVERSITY</p>
-  <a href="https://www.google.com">Click ME</a>
+  <a href="https://www.google.com">Click ME</a> -->
+
+  
 </body>
 </html>
