--- a/JAVASCRIPT2/index.html
+++ b/JAVASCRIPT2/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Welcome to the world of Programming!</h1>
 
-    <button style="color: red; size: 100cap; background-color: yellow;"  onclick="alert('Stop Using this Website')">Risk</button>
+    <!-- <button style="color: red; size: 100cap; background-color: yellow;"  onclick="alert('Stop Using this Website')">Risk</button> -->
+
+    
+
+<script src="intro.js"></script>
 </body>
 </html>
